--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,9 @@
   "recommendations": [
     "bierner.markdown-preview-github-styles",
     "davidanson.vscode-markdownlint",
-    "formulahendry.docker-explorer",
     "ms-azuretools.vscode-docker",
-    "shardulm94.trailing-spaces"
+    "shakram02.bash-beautify",
+    "shardulm94.trailing-spaces",
+    "streetsidesoftware.code-spell-checker"
   ]
 }
