--- a/docker-compose.postgres.yml
+++ b/docker-compose.postgres.yml
@@ -2,30 +2,32 @@ version: "3.8"
 
 services:
   postgres:
+    env_file: ${DOT_ENV_FILE:-.env-none}
     restart: always
-    image: postgres:${PG_VERSION}
-    container_name: ${PG_CONTAINER}
+    image: postgres:${PG_VERSION:-12.4}-alpine
+    container_name: ${PG_CONTAINER:-pg-docker}
     ports:
-      - ${PG_PORT}:5432
+      - ${PG_PORT:-5432}:5432
     networks:
-      - ${PG_NETWORK}
+      - ${PG_NETWORK:-postgres}
     environment:
-      POSTGRES_USER: ${PG_USER}
-      POSTGRES_PASSWORD: ${PG_PASS}
+      POSTGRES_USER: ${PG_USER:-postgres}
+      POSTGRES_PASSWORD: ${PG_PASS:-docker}
     command: ["postgres", "-c", "log_statement=all", "-c", "log_destination=stderr"]
     volumes:
       - pgvol:/var/lib/postgresql/data:delegated
   pgAdmin:
+    env_file: ${DOT_ENV_FILE:-.env-none}
     restart: always
     image: dpage/pgadmin4
-    container_name: ${PGA_CONTAINER}
+    container_name: ${PGA_CONTAINER:-pg-admin}
     ports:
-      - ${PGA_PORT}:80
+      - ${PGA_PORT:-8010}:80
     networks:
-      - ${PG_NETWORK}
+      - ${PG_NETWORK:-postgres}
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGA_USER}
-      PGADMIN_DEFAULT_PASSWORD: ${PGA_PASS}
+      PGADMIN_DEFAULT_EMAIL: ${PGA_USER:-mail@mail.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGA_PASS:-pass}
     volumes:
       - pgavol:/var/lib/pgadmin:delegated
 volumes:
@@ -34,4 +36,4 @@ volumes:
 
 networks:
   postgres:
-    name: ${PG_NETWORK}
+    name: ${PG_NETWORK:-postgres}
