--- a/docker-compose.postgres.yml
+++ b/docker-compose.postgres.yml
@@ -1,10 +1,10 @@
-version: "3.8"
+version: "3.9"
 
 services:
   postgres:
     env_file: ${DOT_ENV_FILE:-.env-none}
     restart: always
-    image: postgres:${PG_VERSION:-14.2}-alpine
+    image: postgres:${PG_VERSION:-15.3}-alpine
     container_name: ${PG_CONTAINER:-pg-docker}
     ports:
       - ${PG_PORT:-5432}:5432
@@ -19,7 +19,7 @@ services:
   pgAdmin:
     env_file: ${DOT_ENV_FILE:-.env-none}
     restart: always
-    image: dpage/pgadmin4
+    image: dpage/pgadmin4:${PGA_VERSION:-7.3}
     container_name: ${PGA_CONTAINER:-pg-admin}
     ports:
       - ${PGA_PORT:-8010}:80
