Updated versions. Updated extensions.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "ms-azuretools.vscode-docker",
     "shakram02.bash-beautify",
     "shardulm94.trailing-spaces",
+    "socheatsok78-lab.dotenv-vscode-stripped",
     "streetsidesoftware.code-spell-checker"
   ]
 }
